# Anime-Image-Classification

./: README.md  anime_classifier_cnn1.ipynb  anime_classifier_cnn2.ipynb  model_building.ipynb  pyproject.toml
